# turso-prisma

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  script.ts  script_2.ts  tsconfig.json
dump/: seed.sql
lib/: utils.ts
mongo/: migrate.ts  migrateUsers.ts
prisma/: dev.db  dev.db-journal  schema-prod.prisma  schema.prisma
prisma/migrations/0_init/: migration.sql
prisma/migrations/20231118012302_init/: migration.sql
prisma/migrations/20231118140336_cleanup/: migration.sql
prisma/migrations/20231118154948_init/: migration.sql
prisma/migrations/20231119154920_remove_token/: migration.sql
prisma/migrations/20231123185846_init/: migration.sql
prisma/migrations/20231124014643_user_active/: migration.sql
prisma/migrations/20231124022255_optional_banner_avatar/: migration.sql
prisma/migrations/20231124030252_nullish_types/: migration.sql
prisma/migrations/20231124032015_default_updated/: migration.sql
prisma/migrations/20231124032204_optional_updated/: migration.sql
prisma/migrations/20231124033747_y/: migration.sql
prisma/migrations/20231125205959_0_init/: migration.sql
prisma/migrations/20240104184819_rename_owner/: migration.sql
prisma/reset/: dropTables.sql
scripts/: drop-tables.sh  dropAllTables.js  dump-mongo.sh  echo.sh  migrate.ts  migrateNew.ts  migrateRawSql.ts  sync.ts
scripts/lib/: utils.ts
scripts/rust/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
scripts/rust/src/: lib.rs  main.rs
types/: types.ts
