[package]
name = "upload"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.3.1"
dotenv = "0.15.0"
libsql-client = "0.33.1"
tokio = { version = "1.29.1", features = ["full"] }
napi = { version = "2.14.1", features = ["async"] }
napi-derive = "2.14.2"
napi-build = "2.1.0"
